--- a/css/style.css
+++ b/css/style.css
@@ -1014,7 +1014,7 @@ select.form-control.has-value{
 }
 .gradient-overly-right-light:before {
     background: -webkit-gradient(linear, left top, right top, color-stop(0, #1A2C79), to(transparent));
-    background: linear-gradient(to right, #fff4f4 30%, rgba(26, 44, 121, 0.18) 100%);
+    background: linear-gradient(to right, #fffafa38 30%, rgba(26, 44, 121, 0.18) 100%);
 
 }
 .gradient-overly-right-color:before {
@@ -1210,6 +1210,16 @@ select.form-control.has-value{
     }
     .custom-indicators li button{
         padding: 6px 8px;
+    }
+
+    .gradient-overly-right-light{
+        background-image: none !important;
+        text-align: center;
+    }
+
+    .hero-slider-content span{
+        margin-bottom: 10px;
+        display: inline-block;
     }
 }
 
@@ -4120,5 +4130,4 @@ button.scroll-top:focus{
 
 .header-lead{
     font-size: 16px !important;
-    width: 80% !important;
 }
